// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "wfa/measurement/internal/reporting/v2/basic_metric_set.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

message MetricSetDetails {
  // The size of the population for the filters/grouping specified
  int32 population_size = 1;

  // Metrics for the entire reporting_unit.
  message ReportingUnitMetricSet {
    // The metrics for the union of the reporting_unit components
    BasicMetricSet basic = 1;

    // The stacked incremental reach of the ReportingUnit.
    //
    // For example if the units in the ReportingUnit were "rs1", "rs2",
    // "rs3" then the values in this array are as follows:
    //  1. reach(rs1)
    //  2. reach(rs1+rs2) - reach(rs1)
    //  3. reach(rs1+rs2+rs3) - reach(rs1+rs2)
    repeated int32 stacked_incremental_reach = 2;
  }
  // Metrics for the whole reporting_unit
  ReportingUnitMetricSet reporting_unit = 2;
}
